--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+		<meta
+			name="description"
+			content="A password generator app that allows users to create a random password of variable length with several options for specifying the types of characters included in the generation algorithm."
+		>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
